# ComputerArchitecture-Project2-TomasuloSimulator

./: CMakeLists.txt  flake.nix  test_case_1.txt  test_case_2.txt
Webpart/: index.html
src/: CMakeLists.txt  Instruction.cpp  Instruction.hpp  Processor.cpp  Processor.hpp  Text.txt  execute.cpp  execute.h  issue.cpp  issue.h  main.cpp  writeBack.cpp  writeBack.h
src/web/: data.txt  design.css  index.html  main.js
tests/: basic.asm  call_test.asm  counts.txt  cycles.txt  issue_test.cpp  parsing_test.asm
